changes are related to migrating the project to module-base doctrine initiated in java 9 etc.