@@ -1,5 +1,5 @@
 /* 
- * Copyright (C) 2017 Sergey Nikitin
+ * Copyright (C) 2019 Sergey Nikitin
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -14,66 +14,78 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-package org.ioblako.math.calculator;
+package org.ioblako.edit;
 
+import java.awt.Color;
 import javax.swing.event.ChangeEvent;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.plot.CategoryPlot;
 import org.jfree.chart.plot.PlotOrientation;
-import org.jfree.chart.renderer.category.BarRenderer;
+import org.jfree.chart.renderer.category.LineAndShapeRenderer;
 import org.jfree.data.category.DefaultCategoryDataset;
 import org.jfree.ui.RefineryUtilities;
 
+import org.ioblako.math.calculator.jc;
 
 
 /**
  *
  * @author sergey_nikitin
  */
-public class barPlt extends AbstractFramePlt implements FramePlt {
-    static final long  serialVersionUID=1203110; 
-    public barPlt(){
+public class linePlt extends AbstractFramePlt implements FramePlt {
+    static final long serialVersionUID=100001;
+    public linePlt(){
         super("");
     }
     @Override
     public void setInput(String txt){
-    toShow=txt;
-}
-    public barPlt(String title, String x_title, String y_title, String space, String Categories) throws Exception{
+        toShow=txt;
+    }
+   public linePlt(String title, String x_title, String y_title, String Categories) throws Exception{
         super("");
        DefaultCategoryDataset dataset = new DefaultCategoryDataset();
        String[] ct = Categories.split(";");
         for(String bf: ct){
-           // if(bf.startsWith("("))
-           //     bf=bf.substring(1);
+          //  if(bf.startsWith("("))
+              //  bf=bf.substring(1);
            // if(bf.endsWith(")"))
-             //   bf=bf.substring(0,bf.length()-1);
-         dataset.addValue(new Double(jc.eval("2dbl("+jc.eval(bf.substring(0,bf.indexOf(',')))+")")),
+              //  bf=bf.substring(0,bf.length()-1);
+         dataset.addValue(Double.valueOf(jc.eval("2dbl("+jc.eval(bf.substring(0,bf.indexOf(',')))+")")),
                                   bf.substring(bf.indexOf(',')+1,bf.lastIndexOf(',')),
                                   bf.substring(bf.lastIndexOf(',')+1));
         }
         if(title==null)
-          title = "Bar Chart";
+          title = "Line Chart";
         if(y_title == null)
            y_title = "y";
         if(x_title == null)
             x_title="x";
         
-          chart = ChartFactory.createBarChart(
+          chart = ChartFactory.createLineChart(
                                title,
                                x_title,
                                y_title,
                                dataset,
                                PlotOrientation.VERTICAL, // orientation
-                               true,                     // include legend
+                               false,                     // include legend
                                true,                     // tooltips?
                                false                     // URLs?
                         );
+         chart.setBackgroundPaint(Color.white);
+         LineAndShapeRenderer renderer = (LineAndShapeRenderer)( (CategoryPlot)chart.getPlot()).getRenderer(); 
+         //renderer.setShapesVisible(true);
+         renderer.setDrawOutlines(true);
+         renderer.setUseFillPaint(true);
+         //renderer.setFillPaint(Color.white);
+
+         
+         /*
          if(space!=null){
              BarRenderer renderer = (BarRenderer) ((CategoryPlot)chart.getPlot()).getRenderer();
-              renderer.setItemMargin(new Double(space));
+              renderer.setItemMargin(Double.valueOf(space));
          }
+         */
     
         
     }
@@ -86,45 +98,46 @@ public class barPlt extends AbstractFramePlt implements FramePlt {
      */
     @Override
     public void createAndShow() throws Exception{
-        barPlt frameToShow;
+        linePlt frameToShow;
         //toShow = toShow.replace(" ","");
-        if(!toShow.startsWith("barPlt")||toShow.length()<7)
+        if(!toShow.startsWith("linePlt")||toShow.length()<8)
              return;
-      String tt = jc.getInside(toShow.substring(7),'(',')'); 
+      String tt = jc.getInside(toShow.substring(8),'(',')'); 
       String title=null,y_title=null,x_title=null,space=null,bf="";
       if(tt.indexOf('{')==-1)
-          throw new Exception("barPlot is not defined correctly!");
+          throw new Exception("linePlot is not defined correctly!");
        String txt=tt.substring(0,tt.indexOf('{'));
        for(int i = 0;i<txt.length();i++){
             if(txt.charAt(i) == ','){
                 if(bf.contentEquals(""))
-                       throw new Exception("barPlot is not defined correctly!");
+                       throw new Exception("linePlot is not defined correctly!");
                  if(bf.indexOf('=')!= -1){
                     switch (bf.substring(0,bf.indexOf('=')).toLowerCase().trim()) {
                         case "title":
                             if(title != null)
-                                throw new Exception("barPlot is not defined correctly!");
+                                throw new Exception("linePlot is not defined correctly!");
                             title=bf.substring(bf.indexOf('=')+1);
                             bf="";
                             break;
                         case "y_title":
                             if(y_title != null)
-                                throw new Exception("barPlot is not defined correctly!");
+                                throw new Exception("linePlot is not defined correctly!");
                             y_title=bf.substring(bf.indexOf('=')+1);
                             bf="";
                             break;
+                    /*else
+                    if(bf.substring(0,bf.indexOf('=')).toLowerCase().contentEquals("space")){
+                    if(space != null)
+                    throw new Exception("linePlot is not defined correctly!");
+                    space=bf.substring(bf.indexOf('=')+1);
+                    bf="";
+                    } */
                         case "x_title":
                             if(x_title != null)
-                                throw new Exception("barPlot is not defined correctly!");
+                                throw new Exception("linePlot is not defined correctly!");
                             x_title=bf.substring(bf.indexOf('=')+1);
                             bf="";
                             break;
-                        case "space":
-                            if(space != null)
-                                throw new Exception("barPlot is not defined correctly!");
-                            space=bf.substring(bf.indexOf('=')+1);
-                            bf="";
-                            break; 
                         default:
                             break;
                     }
@@ -141,12 +154,13 @@ public class barPlt extends AbstractFramePlt implements FramePlt {
                      if(y_title == null){
                          y_title=bf;
                          bf="";
-                     }else
+                     }/* else
                      if(space == null){
                          space=bf;
                          bf="";
-                     }else
-                     throw new Exception("barPlot is not defined correctly!");
+                         continue;
+                     }*/else
+                     throw new Exception("linePlot is not defined correctly!");
                  }
             }
             else
@@ -156,14 +170,14 @@ public class barPlt extends AbstractFramePlt implements FramePlt {
           throw new Exception("barPlot is not defined correctly!");
        txt = tt.substring(tt.indexOf('{')+1);
        
-       frameToShow = new barPlt(title,x_title,y_title,space,jc.getInside(txt,'{','}'));
-       ChartPanel chartP = new ChartPanel(frameToShow.getChart());
-       chartP.setPreferredSize(new java.awt.Dimension(500, 500));
-       chartP.setEnforceFileExtensions(false);
-       frameToShow.setContentPane(chartP);
-       frameToShow.setJMenuBar(barPlt.getMenu(frameToShow.getChart(),frameToShow));
+       frameToShow = new linePlt(title,x_title,y_title,jc.getInside(txt,'{','}'));
+       ChartPanel chartPanel = new ChartPanel(frameToShow.getChart());
+       chartPanel.setPreferredSize(new java.awt.Dimension(500, 500));
+       chartPanel.setEnforceFileExtensions(false);
+       frameToShow.setContentPane(chartPanel);
+       frameToShow.setJMenuBar(linePlt.getMenu(frameToShow.getChart(),frameToShow));
        frameToShow.pack();
-        RefineryUtilities.centerFrameOnScreen(frameToShow);
+       RefineryUtilities.centerFrameOnScreen(frameToShow);
        frameToShow.setVisible(true);
     }
 
@@ -174,14 +188,22 @@ public class barPlt extends AbstractFramePlt implements FramePlt {
 
     @Override
     public String getHelp() {
-        return "Bar chart. "+System.lineSeparator()+
-            "barPlt(title=bar chart example,y_title=y values,x_title=x values,{1,test 1,fall;2,test 2,fall;2.3,test 3,fall;1.8,test 1,spring;2.5,test 2,spring;3,test 3,spring})"+System.lineSeparator()+
-                "One can implement it as follows"+System.lineSeparator()+
-                "C<-1,test 1,fall;2,test 2,fall;2.3,test 3,fall;1.8,test 1,spring;2.5,test 2,spring;3,test 3,spring"+System.lineSeparator()+
-                "and then"+System.lineSeparator()+
-                "barPlt(title=bar chart example,y_title=y values,x_title=x values,{C})";
-       // throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
+        return "Line plot." + System.lineSeparator()+
+                "linePlt(title=Test scores,y_title=average grade,x_title=Tests,{75,Calculus I,Test 1;60,Calculus I,Test 2;65,Calculus I,Test 3;80,Calculus I,Final Test;" +System.lineSeparator()+
+"           95,Calculus II,Tes 1 1;55,Calculus II,Test 2;85,Calculus II,Test 3;75,Calculus II,Final Test})" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"Introducing variables" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"A<-75,Calculus I,Test 1;60,Calculus I,Test 2;65,Calculus I,Test 3;80,Calculus I,Final Test;" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"and" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"B<-95,Calculus II,Tes 1 1;55,Calculus II,Test 2;85,Calculus II,Test 3;75,Calculus II,Final Test" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"we can write the same procedure as" +System.lineSeparator()+
+"" +System.lineSeparator()+
+"linePlt(title=Test scores,y_title=average grade,x_title=Tests,{AB})";
+        //throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
     }
-    
-    
+     
 }
