@@ -73,7 +73,7 @@ String ErrorMessage="Format error. roots(step,{a0,...,an}).";
             if(next.indexOf('/')!=-1)
                  poly[i] = jc.getFraction(next).toBigDecimal(jc.MC).doubleValue();
             else
-                 poly[i]=new Double(next);
+                 poly[i]=Double.valueOf(next);
              i++;
          }
          setReport(LGA.PrintPoly(poly));
